--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,9 +5,137 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgb(240, 156, 227);
+background: linear-gradient(90deg, rgb(247, 163, 234) 0%, rgb(224, 146, 255) 50%, rgba(247, 163, 234) 100%);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1 {
+  color: rgb(111, 18, 168);
+  font-size: 5vw;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.form >  input {
+  margin: 1.5vw 30vw;
+  height: 2vw;
+  border: rgb(121, 39, 172) solid 1px;
+  border-radius: 0.3vw;
+  align-items: center;
+}
+
+.link {
+  font-size: 1.5vw;
+  font-weight: 600;
+  color: rgb(111, 18, 168);
+  text-decoration: none;
+  margin: 1.5vw;
+}
+
+header {
+  margin-top: 2vw;
+  font-size: 3vw;
+  font-weight: 600;
+  color: rgb(111, 18, 168);
+}
+
+.username {
+  margin: 2vw 0;
+  font-size: 2vw;
+  font-weight: 400;
+  color: rgb(111, 18, 168);
+}
+
+.score {
+  font-weight: 300;
+}
+
+.question-container {
+  display: flex;
+  justify-content: space-around;
+  margin: 4vw 0;
+  padding: 0 2vw;
+}
+
+.card {
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 1vw;
+  border-radius: 1vw;
+}
+
+.card__question {
+  margin-bottom: 1vw;
+  font-size: 1.5vw;
+  color: rgb(111, 18, 168);
+}
+
+.card__answer {
+  margin: 0.5vw 2vw;
+  height: 2vw;
+  background-color: rgb(251, 216, 246);
+  border:rgb(202, 100, 243) solid 1px;
+  border-radius: 0.3vw;
+  transition: all 200ms ease-in-out;
+}
+
+.correct {
+  background-color: rgb(82, 233, 48);
+}
+
+.wrong {
+  background-color: rgb(242, 109, 109);
+}
+
+button:hover {
+  cursor: pointer;
+  background-color: rgb(247, 190, 238);
+}
+
+.player {
+  display: flex;
+  justify-content: space-between;
+  margin: 3vw 40vw;
+  color: rgb(111, 18, 168);
+  font-size: 1.5vw;
+}
+
+h2 {
+  margin-top: 2vw;
+  font-size: 2vw;
+  font-weight: 400;
+  color: rgb(111, 18, 168);
+}
+
+.results {
+  display: flex;
+  flex-direction: column;
+  margin: 2vw 25vw 0 35vw;
+  color: rgb(111, 18, 168);
+  font-size: 1.3vw;
+}
+
+.results__row {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1vw;
+}
+
+.deleteBtn {
+  margin: 0 2vw;
+  height: 2vw;
+  background-color: rgb(251, 216, 246);
+  border:rgb(202, 100, 243) solid 1px;
+  border-radius: 0.3vw;
 }
